Add device display settings field on server and update devices api
